# paper-format-corrector

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  build.py  cover_page_generator.py  format_corrector.py  format_exporter.py  gui.py  image_handler.py  llm_parser.py  logger.py  main.py  pyproject.toml  ref_auto_complete.py  requirement_parser.py  requirements.txt  run.py  section_detector.py  test_corrector.py  test_requirement.py  test_thesis.py  论文格式矫正工具.spec
.claude/: settings.local.json  tasks.md
.github/workflows/: ci.yml
config/: config.yaml
docs/: PRD.md
plugins/: example_word_count_plugin.py
presets/: apa.yaml  chicago.yaml  chinese_thesis.yaml  harvard.yaml  ieee.yaml  mla.yaml  nature.yaml  science.yaml
src/paper_format_corrector/: __init__.py  __main__.py  app.py  cli.py  desktop_gui.py  gui.py
src/paper_format_corrector/core/: __init__.py  file_converter.py  format_corrector.py  format_exporter.py  style_extractor.py
src/paper_format_corrector/generators/: __init__.py  cover_page_generator.py
src/paper_format_corrector/handlers/: __init__.py  figure_table_handler.py  header_footer_handler.py  image_handler.py  table_handler.py  toc_handler.py
src/paper_format_corrector/infra/: __init__.py  compat.py  logger.py  path_security.py  plugin_manager.py  preset_loader.py
src/paper_format_corrector/parsers/: __init__.py  cross_reference.py  llm_parser.py  ref_auto_complete.py  reference_formatter.py  requirement_parser.py  section_detector.py
src/paper_format_corrector/quality/: __init__.py  diff_reporter.py  (+2 more)
tests/: conftest.py  test_basic.py  test_code_formula.py  test_corrector.py  test_edge_cases.py  test_image_table.py  test_presets.py  test_requirement.py  test_startup_and_template.py  test_thesis.py
